--- a/COS301Phase2-Group3test-latex files/COS301_Phase2-Group3test.tex
+++ b/COS301Phase2-Group3test-latex files/COS301_Phase2-Group3test.tex
@@ -405,6 +405,8 @@ PHP’s implicit MVC features will be used to implement this architecture.
 	moderation failures and appraisals which have been received.
 \item Buzz Reporting - An add-on that a user or lecturer can use to define and generate their own reports.
 \item RDMS - A relational database management system will be used to store and retrieve all data/information that is directly connected to the Buzz system. 
+\item Both client- and server-side scripting to facilitate database access and algorithms.
+\item File creation and storage for the communication of information between modules.
 \end{description}
 
 \subsection{Protocols}
