A few small additions

--- a/COS301_Phase2-Group3test2.tex
+++ b/COS301_Phase2-Group3test2.tex
@@ -419,6 +419,7 @@ PHP’s implicit MVC features will be used to implement this architecture.
 \subsection{API Specifications}
 \begin{description}
 \item Buzz uses a REST API. This means that the API consists of a set of resouces which you can request or manipulate using the standard HTTP methods GET and POST. This will make resuming at an earlier left state easier to keep track of to the user.
+\item This request system might be used to link user graphs to other websites, perhaps work profile sites like linkedIn.
 \end{description}
 \subsection{Quality Requirements}
 
