--- a/COS301_Phase2-Group3test2.tex
+++ b/COS301_Phase2-Group3test2.tex
@@ -428,9 +428,9 @@ PHP’s implicit MVC features will be used to implement this architecture.
 
 \subsection{System}
 	\begin{description}
-\item The BuzzSpace has to be integrated into the CS department’s website. 
- \item Reason: The user’s credentials from the CS LDAP will be used for authentication 
-\item  purposes in the BuzzSpace e.g. to register on the BuzzSpace to login.
+\item The BuzzSpace has to be integrated into the CS department’s website. \\
+\texttt{Reason:The user’s credentials from the CS LDAP will be used for authentication
+purposes in the BuzzSpace e.g. to register on the BuzzSpace to login.}
 \end{description}
 
 \subsection{User}
@@ -442,37 +442,70 @@ Only users registered for a module from the CS department will be allowed to
 
 	\begin{description}
 	\item[$\bullet$] 
-Users who are registered as guests on the BuzzSpace will only be allowed to read and \item observe the discussion forums. 
-\item Reason: To manage who has access to the BuzzSpace.
+Users who are registered as guests on the BuzzSpace will only be allowed to read and \item observe the discussion forums. \\
+\texttt{Reason: To manage who has access to the BuzzSpace.}
 \end{description}
 
 \subsection{Time}
 	\begin{description}
 \item If a user is logged in and remains inactive for more than 30mins the user 
-\item will have to login again to post on the forum. 
-\item  Reason: To ensure security for user Authentication. 
+\item will have to login again to post on the forum. \\
+\texttt{Reason: To ensure security for user Authentication.}
 \end{description}
 
 \subsection{Technologies}
 	\begin{description}
 \item[$\bullet$] HTML
-\item To create the skeleton of the BuzzSpace's front-end to enable users to login/logout
+\item To create the skeleton of the BuzzSpace's front-end to enable users to login/logout,
 \item create forums and participate in discussions.
-\item [$\bullet$] Javascript and  AJAX
+\item [$\bullet$] JAVASCRIPT and  AJAX
 \item Used for the BuzzSpace's front-end to verify the login details of each user and will keep 
 \item track of user login and particiaptions on discussion forums.
 \item [$\bullet$] PHP
-\item Allows the front end to communicate with the CS LDAP database to access user \item credentials for authentication purposes for logging in to the BuzzSpace.
+\item Is used by many large websites. Will allow system to offer support 
+\item to a thousand simultaneous users.
+\newpage
+\item [$\bullet$] CakePHP
+\item Makes coding in PHP much easier and efficient. 
+\item It is also based on the MVC architecture.
 \item [$\bullet$] JavaEE
-\item [$\bullet$] JPA and JPQL
+\item Integrating the system will be easier beacuse JavaEE is 
+\item already used within the client website.
+\item [$\bullet$] JPA
+\item Will be used to manage the relational data in JavaEE.
+\item [$\bullet$] JPQL
+\item Creates Queries for the database.
+\item [$\bullet$] JSF
+\item Used to build component user interface.
+\item [$\bullet$] COBALT
+\item JSF will be coded in COBALT and AJAX. COBALT is simple and flexible to use.
+\item [$\bullet$] MySQL
+\item It is a relational database. The system needs for multiple database 
+\item connections with connection polling.
+\item [$\bullet$] Web browsers\\
+\texttt{Chrome version:26}\\
+\texttt{FireFox version:24}\\
+\texttt{Opera version:12.10}\\
+\texttt{Safari version:10}\\
+\texttt{IE(Internet explora) version:10}
 \end{description}
 
 \subsection{Architectural Patterns/Frameworks}
 	\begin{description}
-\item[$\bullet$] Layer (object-oriented design)
+\item[$\bullet$] Layering (object-oriented design)
+\\ \texttt{Services Layer}\\
+The CRUD actions that will change the database will be intercepted in this layer.\\
+\\ \texttt{Busniess Logic Layer}\\
+Will capture information of requests from obejcts and submit the services request.\\
+\\ \texttt{Multi-Layered}\\
+MVC model uses this approcah to enable the separation of business logic.\\
+\\ \texttt{Transport Layer}\\
+Used to provide devices with a connection to a router.
 \item[$\bullet$] MVC (Model View Controller)
-\item[$\bullet$] Peer-to-Peer Network
-\item[$\bullet$] Services Oriented Architectures
+\item Allows the systeme's  states to change and it encapsulates the interaction
+\item from the user  and transforms these interactions into business logic.
+\item[$\bullet$] SOA(Services Oriented Architectures)
+\item It is agile and flexible. Allows change and easy alterations to the system.
 \end{description}
 \section{References}
 PIETERSE, V. 2015. COS301: Mini project Buzz. In: Lecture notes issued online. University of Pretoria. Pretoria, South Africa
