--- a/COS301_Phase2-Group3a.tex
+++ b/COS301_Phase2-Group3a.tex
@@ -294,6 +294,9 @@ PHP’s implicit MVC features will be used to implement this architecture.
 		\emph{Description: }\\ The activity of users being monitored and logged somewhere to be reviewed at some point. Action can then be taken by the administrator based on the logged actions. \\	
 		\\\emph{Motivation: }\\ This is an important requirement of the system as one of the core responsibilities of this system is to award user participation with points to increase their rank on the system. The system, therefore, needs to be able to log user activity so adjustments can be made to their ranking. /likewise with checking for netiquette and plagiarism infringements. Without the system being monitorable, none of this is possible. \\
 		
+		\emph{Strategy: }\\
+		For plagiarism and netiquette the system implements components that review all posts made by users. Should these posts need flagging the system does so and notifies the user and the buzz space administrator. 
+		
 	\subsection{Important Quality Requirements}
 		%Jess
 		\subsubsection{Security}
@@ -345,57 +348,57 @@ PHP’s implicit MVC features will be used to implement this architecture.
 		\\\emph{Motivation: }\\
 		\\\emph{Description: }\\
 
-\begin{comment}		
-\subsection{Performance}
-	\subsubsection{Expectation:} The system has to have a high standard of performance and should not disappoint the user.
-	\subsubsection{Prioritization:} Critical
-	\subsubsection{Description:} This quality is used in the context of the system running smoothing and upholding a high level of performance.\\ 
-	The system should not lack in performance. It should flow smoothly and quickly between users activities and actions. The system should display appropriate and correct information at all times. The system should not have lag and should have a high speed of performance. When feedback and statistics are requested, the system should generate them in a timely fashion. The system should not hog essential computer resources such as RAM, memory or CPU time.
-	
-\subsection{Reliability}
-	\subsubsection{Expectation:} The system has to be reliable.
-	\subsubsection{Prioritization:} Critical
-	\subsubsection{Description:} This quality is used in the context of the system being trustworthy of its content, structure, and overall existence. The system has to be designed and implemented in such a way that it is reliable to all end-users.  The system has to maintain the same consistency throughout.\\
-	Users using the system have to find the system to be reliable. Thus random faults and errors should not occur. The user should be able to interact with the system without being placed in a situation of uncertainty and untrustworthiness. The system should ensure that all content provided by the users will be stored and used in appropriate ways that data will not get lost, and that misinformation will not occur. For system maintenance, the system should ensure that all content is stored and can be retrieved and that all activity on the system is correctly logged and van be traced back to the user .
-	
-\subsection{Scalability}
-	\subsubsection{Expectation:} System should be able to handle (at the very least) the number of registered students on the CS LDAP system. 
-	\subsubsection{Prioritization:} Critical
-	\subsubsection{Example in System:} Number of simultaneous posts/comments, number of online users etc.
-\subsection{Security}
-	\subsubsection{Expectation:} System has to be secure and safe
-	\subsubsection{Prioritization:} Critical
-	\subsubsection{Stakeholders:} The stakeholders for this requirement are: the users such as students, clients, lecturers, staff, tutors etc,  as well as the system maintainer.
-	\subsubsection{Description:} This quality is used in the context of the system hiding necessary information from certain users and keeping information such identities private from the public. The system has to maintain accessibility rights and proper authorization. The system has to provide access to authorized users and deny access to intruders. Information on the system has to be kept safe and the system has have a high level of integrity.//
-	When a user logs into the system, the users’ login details should be kept safe from other users. The system has to have protection against “hackers” and intruders that try to alter the system without having privileges to do so. 
-\subsection{Flexibility}
-\subsection{Integratability}
-	\subsubsection{Expectation:} System must integrate well with any host website.
-	\subsubsection{Prioritization:} Important
-	\subsubsection{Example in System:} Users of the host site should be able to access the forum easily. It should seem as if its merely an extension of the host site.
-\subsection{Maintainability}
-	\subsubsection{Expectation:} System must be easy to maintain/modify
-	\subsubsection{Prioritization:} Important
-	\subsubsection{Example in System:} Modular separation of concerns, low coupling and reduced dependencies.
-\subsection{Auditability}
-	\subsubsection{Expectation:} System must be auditable
-	\subsubsection{Prioritization:} Important
- 	\subsubsection{Example in System:} The plagiarism and netiquette checker should have no problem editing the page to ensure that every post is appropriate for the website.
-\subsection{Monitorability}
-	\subsubsection{Expectation:} System has to be able to be monitored and all activity properly logged.
-	\subsubsection{Prioritization:} Nice to have
-	\subsubsection{Stakeholders:} The stakeholders for this requirement are:  the system maintainers and users in need of statistics
-	\subsubsection{Description:} This quality is used in the context of the system being structured in such a way that statistics and information can be gathered and analysed easily. The system has to be designed and implemented in such a way that all activity and actions are properly logged and data mining can easily be done based on the logged information.\\
-	
-	Users with appropriate privileges should be able to easily track and monitor users’ actions and activity on the system as well as all the shared information.  The system should be easy to audit as all the activity should be well logged and not actions disregarded.
-	
-\subsection{Cost}
-\subsection{Usability}
-	\subsubsection{Expectation:} The system must be easy to use by the average user.
-	\subsubsection{Prioritization:} Critical
-	\subsubsection{Example in System:} Navigating the site should be straight forward. Buttons and links should be clearly visible and placed in easy to find locations. Naming convention should be descriptive and unambiguous.
-	
-\end{comment}
+%\begin{comment}		
+%\subsection{Performance}
+%	\subsubsection{Expectation:} The system has to have a high standard of performance and should not disappoint the user.
+%	\subsubsection{Prioritization:} Critical
+%	\subsubsection{Description:} This quality is used in the context of the system running smoothing and upholding a high level of performance.\\ 
+%	The system should not lack in performance. It should flow smoothly and quickly between users activities and actions. The system should display appropriate and correct information at all times. The system should not have lag and should have a high speed of performance. When feedback and statistics are requested, the system should generate them in a timely fashion. The system should not hog essential computer resources such as RAM, memory or CPU time.
+%	
+%\subsection{Reliability}
+%	\subsubsection{Expectation:} The system has to be reliable.
+%	\subsubsection{Prioritization:} Critical
+%	\subsubsection{Description:} This quality is used in the context of the system being trustworthy of its content, structure, and overall existence. The system has to be designed and implemented in such a way that it is reliable to all end-users.  The system has to maintain the same consistency throughout.\\
+%	Users using the system have to find the system to be reliable. Thus random faults and errors should not occur. The user should be able to interact with the system without being placed in a situation of uncertainty and untrustworthiness. The system should ensure that all content provided by the users will be stored and used in appropriate ways that data will not get lost, and that misinformation will not occur. For system maintenance, the system should ensure that all content is stored and can be retrieved and that all activity on the system is correctly logged and van be traced back to the user .
+%	
+%\subsection{Scalability}
+%	\subsubsection{Expectation:} System should be able to handle (at the very least) the number of registered students on the CS LDAP system. 
+%	\subsubsection{Prioritization:} Critical
+%	\subsubsection{Example in System:} Number of simultaneous posts/comments, number of online users etc.
+%\subsection{Security}
+%	\subsubsection{Expectation:} System has to be secure and safe
+%	\subsubsection{Prioritization:} Critical
+%	\subsubsection{Stakeholders:} The stakeholders for this requirement are: the users such as students, clients, lecturers, staff, tutors etc,  as well as the system maintainer.
+%	\subsubsection{Description:} This quality is used in the context of the system hiding necessary information from certain users and keeping information such identities private from the public. The system has to maintain accessibility rights and proper authorization. The system has to provide access to authorized users and deny access to intruders. Information on the system has to be kept safe and the system has have a high level of integrity.//
+%	When a user logs into the system, the users’ login details should be kept safe from other users. The system has to have protection against “hackers” and intruders that try to alter the system without having privileges to do so. 
+%\subsection{Flexibility}
+%\subsection{Integratability}
+%	\subsubsection{Expectation:} System must integrate well with any host website.
+%	\subsubsection{Prioritization:} Important
+%	\subsubsection{Example in System:} Users of the host site should be able to access the forum easily. It should seem as if its merely an extension of the host site.
+%\subsection{Maintainability}
+%	\subsubsection{Expectation:} System must be easy to maintain/modify
+%	\subsubsection{Prioritization:} Important
+%	\subsubsection{Example in System:} Modular separation of concerns, low coupling and reduced dependencies.
+%\subsection{Auditability}
+%	\subsubsection{Expectation:} System must be auditable
+%	\subsubsection{Prioritization:} Important
+% 	\subsubsection{Example in System:} The plagiarism and netiquette checker should have no problem editing the page to ensure that every post is appropriate for the website.
+%\subsection{Monitorability}
+%	\subsubsection{Expectation:} System has to be able to be monitored and all activity properly logged.
+%	\subsubsection{Prioritization:} Nice to have
+%	\subsubsection{Stakeholders:} The stakeholders for this requirement are:  the system maintainers and users in need of statistics
+%	\subsubsection{Description:} This quality is used in the context of the system being structured in such a way that statistics and information can be gathered and analysed easily. The system has to be designed and implemented in such a way that all activity and actions are properly logged and data mining can easily be done based on the logged information.\\
+%	
+%	Users with appropriate privileges should be able to easily track and monitor users’ actions and activity on the system as well as all the shared information.  The system should be easy to audit as all the activity should be well logged and not actions disregarded.
+%	
+%\subsection{Cost}
+%\subsection{Usability}
+%	\subsubsection{Expectation:} The system must be easy to use by the average user.
+%	\subsubsection{Prioritization:} Critical
+%	\subsubsection{Example in System:} Navigating the site should be straight forward. Buttons and links should be clearly visible and placed in easy to find locations. Naming convention should be descriptive and unambiguous.
+%	
+%\end{comment}
 	
 	
 \section{Integration Requirements}
